# lyre

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: Ode to Joy - Beethoven.lyre  Row, Row, Row Your Boat - Traditional.lyre
lyre/: __main__.py  player.py
