[tool.poetry]
name        = "lyre"
version     = "0.1.0"
description = "Reads .lyre files to pass input to Genshin Impact to play the lyre."
authors     = ["G Levi Rodriguez <g.levi.rodriguez@gmail.com>"]

[tool.poetry.dependencies]
python    = "^3.6"
pywin32   = "^300"
pywinauto = "^0.6.8"

[tool.poetry.dev-dependencies]
black        = "^20.8b1"
flake8       = "^3.9.0"
flake8-black = "^0.2.1"

[build-system]
requires      = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
